Edited introduction section

--- a/igtv_data/igtv.ipynb
+++ b/igtv_data/igtv.ipynb
@@ -166,10 +166,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "140f41d8-bc9c-4b5e-bed8-13b5d2cce30d",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f873e37c-c3bc-4dad-9410-dfbbeb97b901",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "# which campagn had the highest engagement rate\n",
+    "highest_engagement_rate = "
+   ]
   }
  ],
  "metadata": {
